Upgrade agrona version (#1281)